--- a/src/app/about/format/page.mdx
+++ b/src/app/about/format/page.mdx
@@ -7,7 +7,7 @@ export const metadata = {
 
 <h1 className="flex items-center justify-between gap-4">
   <span>Dataset Format</span>
-  <Badge color="primary">Version 0.2</Badge>
+  <Badge color="info">Version 0.2</Badge>
 </h1>
 
 All datasets distributed in this project follow a standardized format to ensure consistency and ease of use.
