--- a/src/datasets/amazon-reviews.mdx
+++ b/src/datasets/amazon-reviews.mdx
@@ -16,9 +16,13 @@ network-type:
   - hypergraph
 tags:
   - undirected
-  - labelled nodes
+  - 'metadata: node classes'
   - reviews
   - 'source: benson'
+attachments:
+  dataset:
+    url: amazon-reviews.txt.gz
+    size: 266617395
 statistics:
   num-nodes: 2268264
   num-edges: 4285363
@@ -4235,10 +4239,6 @@ statistics:
     7303: 1
     8947: 1
     9350: 1
-attachments:
-  dataset:
-    url: amazon-reviews.txt.gz
-    size: 266617395
 label-count:
   All_Beauty: 85
   Amazon_Fashion: 31
