Lost all zenodo URLs in a recent commit
Ops...

--- a/src/datasets/NDC-classes.mdx
+++ b/src/datasets/NDC-classes.mdx
@@ -14,7 +14,7 @@ related:
   - NDC-substances
 attachments:
   dataset:
-    url: NDC-classes.txt.gz
+    url: https://zenodo.org/records/17607716/files/NDC-classes.txt.gz?download=1
     size: 506164
 statistics:
   num-nodes: 1161
