--- a/src/datasets/NDC-substances.mdx
+++ b/src/datasets/NDC-substances.mdx
@@ -14,7 +14,7 @@ related:
   - NDC-classes
 attachments:
   dataset:
-    url: NDC-substances.txt.gz
+    url: https://zenodo.org/records/17607718/files/NDC-substances.txt.gz?download=1
     size: 1645221
 statistics:
   num-nodes: 5556
