--- a/src/datasets/algebra-questions.mdx
+++ b/src/datasets/algebra-questions.mdx
@@ -19,7 +19,7 @@ related:
   - geometry-questions
 attachments:
   dataset:
-    url: algebra-questions.txt
+    url: https://zenodo.org/records/17202446/files/algebra-questions.txt?download=1
     size: 68569
 statistics:
   num-nodes: 423
