--- a/src/datasets/amazon-reviews.mdx
+++ b/src/datasets/amazon-reviews.mdx
@@ -21,7 +21,7 @@ tags:
   - 'source: benson'
 attachments:
   dataset:
-    url: amazon-reviews.txt.gz
+    url: https://zenodo.org/records/17202002/files/amazon-reviews.txt.gz?download=1
     size: 266617395
 statistics:
   num-nodes: 2268264
