--- a/src/datasets/coauth-DBLP.mdx
+++ b/src/datasets/coauth-DBLP.mdx
@@ -15,7 +15,7 @@ related:
   - coauth-MAG-History
 attachments:
   dataset:
-    url: coauth-DBLP.txt.gz
+    url: https://zenodo.org/records/17600531/files/coauth-DBLP.txt.gz?download=1
     size: 56430542
 statistics:
   num-nodes: 1930378
