--- a/src/datasets/coauth-MAG-Geology.mdx
+++ b/src/datasets/coauth-MAG-Geology.mdx
@@ -16,7 +16,7 @@ related:
   - coauth-MAG-History
 attachments:
   dataset:
-    url: coauth-MAG-Geology.txt.gz
+    url: https://zenodo.org/records/17600658/files/coauth-MAG-Geology.txt.gz?download=1
     size: 30311118
 statistics:
   num-nodes: 1261129
