--- a/src/datasets/coauth-MAG-History.mdx
+++ b/src/datasets/coauth-MAG-History.mdx
@@ -16,7 +16,7 @@ related:
   - coauth-MAG-Geology
 attachments:
   dataset:
-    url: coauth-MAG-History.txt.gz
+    url: https://zenodo.org/records/17600662/files/coauth-MAG-History.txt.gz?download=1
     size: 21767556
 statistics:
   num-nodes: 1034876
