--- a/src/datasets/cooking.mdx
+++ b/src/datasets/cooking.mdx
@@ -10,7 +10,7 @@ tags:
   - 'source: benson'
 attachments:
   dataset:
-    url: cooking.txt.gz
+    url: https://zenodo.org/records/17202566/files/cooking.txt.gz?download=1
     size: 851416
 statistics:
   num-nodes: 6714
