--- a/src/datasets/geometry-questions.mdx
+++ b/src/datasets/geometry-questions.mdx
@@ -19,7 +19,7 @@ related:
   - algebra-questions
 attachments:
   dataset:
-    url: geometry-questions.txt
+    url: https://zenodo.org/records/17202479/files/geometry-questions.txt?download=1
     size: 83500
 statistics:
   num-nodes: 580
