--- a/src/datasets/madison-restaurant-reviews.mdx
+++ b/src/datasets/madison-restaurant-reviews.mdx
@@ -18,7 +18,7 @@ tags:
   - 'source: benson'
 attachments:
   dataset:
-    url: madison-restaurant-reviews.txt
+    url: https://zenodo.org/records/17202762/files/madison-restaurant-reviews.txt?download=1
     size: 29980
 statistics:
   num-nodes: 565
