--- a/src/datasets/mathoverflow-answers.mdx
+++ b/src/datasets/mathoverflow-answers.mdx
@@ -14,7 +14,7 @@ related:
   - stackoverflow-answers
 attachments:
   dataset:
-    url: mathoverflow-answers.txt.gz
+    url: https://zenodo.org/records/17202738/files/mathoverflow-answers.txt.gz?download=1
     size: 1082323
 statistics:
   num-nodes: 73851
