--- a/src/datasets/music-blues-reviews.mdx
+++ b/src/datasets/music-blues-reviews.mdx
@@ -13,7 +13,7 @@ tags:
   - 'source: benson'
 attachments:
   dataset:
-    url: music-blues-reviews.txt
+    url: https://zenodo.org/records/17202708/files/music-blues-reviews.txt?download=1
     size: 58451
 statistics:
   num-nodes: 1106
