--- a/src/datasets/senate-bills.mdx
+++ b/src/datasets/senate-bills.mdx
@@ -17,7 +17,7 @@ related:
   - house-bills
 attachments:
   dataset:
-    url: senate-bills.txt
+    url: https://zenodo.org/records/17198877/files/senate-bills.txt?download=1
     size: 952154
 statistics:
   num-nodes: 294
