--- a/src/datasets/senate-committees.mdx
+++ b/src/datasets/senate-committees.mdx
@@ -15,7 +15,7 @@ related:
   - house-committees
 attachments:
   dataset:
-    url: senate-committees.txt
+    url: https://zenodo.org/records/17200512/files/senate-committees.txt?download=1
     size: 27596
 statistics:
   num-nodes: 282
