--- a/src/datasets/trivago-clicks.mdx
+++ b/src/datasets/trivago-clicks.mdx
@@ -12,7 +12,7 @@ tags:
   - 'source: benson'
 attachments:
   dataset:
-    url: trivago-clicks.txt.gz
+    url: https://zenodo.org/records/17202694/files/trivago-clicks.txt.gz?download=1
     size: 2966049
 statistics:
   num-nodes: 172738
