--- a/src/datasets/vegas-bars-reviews.mdx
+++ b/src/datasets/vegas-bars-reviews.mdx
@@ -18,7 +18,7 @@ tags:
   - 'source: benson'
 attachments:
   dataset:
-    url: vegas-bars-reviews.txt
+    url: https://zenodo.org/records/17202660/files/vegas-bars-reviews.txt?download=1
     size: 65695
 statistics:
   num-nodes: 1234
