--- a/src/datasets/walmart-trips.mdx
+++ b/src/datasets/walmart-trips.mdx
@@ -12,7 +12,7 @@ tags:
   - 'source: benson'
 attachments:
   dataset:
-    url: walmart-trips.txt.gz
+    url: https://zenodo.org/records/17201931/files/walmart-trips.txt.gz?download=1
     size: 1420115
 statistics:
   num-nodes: 88860
