--- a/src/datasets/MAG-10.mdx
+++ b/src/datasets/MAG-10.mdx
@@ -11,7 +11,7 @@ tags:
   - 'source: benson'
 attachments:
   dataset:
-    url: MAG-10.txt.gz
+    url: https://zenodo.org/records/17200740/files/MAG-10.txt.gz?download=1
     size: 560612
 statistics:
   num-nodes: 80198
