--- a/src/datasets/house-bills.mdx
+++ b/src/datasets/house-bills.mdx
@@ -18,7 +18,7 @@ related:
   - senate-bills
 attachments:
   dataset:
-    url: house-bills.txt
+    url: https://zenodo.org/records/17198796/files/house-bills.txt?download=1
     size: 5513425
 statistics:
   num-nodes: 1494
