--- a/src/datasets/house-committees.mdx
+++ b/src/datasets/house-committees.mdx
@@ -15,7 +15,7 @@ related:
   - senate-committees
 attachments:
   dataset:
-    url: house-committees.txt
+    url: https://zenodo.org/records/17202783/files/house-committees.txt?download=1
     size: 83844
 statistics:
   num-nodes: 1290
