--- a/src/datasets/karate-club.mdx
+++ b/src/datasets/karate-club.mdx
@@ -10,7 +10,7 @@ tags:
   - 'lifting: clique complex'
 attachments:
   dataset:
-    url: karate-club.txt
+    url: https://zenodo.org/records/17953924/files/karate-club.txt?download=1
     size: 2947
 statistics:
   num-nodes: 34
