--- a/src/datasets/algebra-questions.mdx
+++ b/src/datasets/algebra-questions.mdx
@@ -13,7 +13,7 @@ network-type:
   - simplicial-complex
   - hypergraph
 tags:
-  - edge labels
+  - 'metadata: edge classes'
   - 'source: benson'
 related:
   - geometry-questions
