--- a/src/datasets/contact-primary-school.mdx
+++ b/src/datasets/contact-primary-school.mdx
@@ -10,7 +10,8 @@ tags:
   - social
   - temporal
   - proximity
-  - "source: benson"
+  - 'metadata: node classes'
+  - 'source: benson'
 related:
   - contact-high-school
 attachments:
