--- a/src/datasets/cooking.mdx
+++ b/src/datasets/cooking.mdx
@@ -6,7 +6,7 @@ citation:
 network-type:
   - hypergraph
 tags:
-  - edge labels
+  - 'metadata: edge classes'
   - 'source: benson'
 attachments:
   dataset:
