--- a/src/datasets/music-blues-reviews.mdx
+++ b/src/datasets/music-blues-reviews.mdx
@@ -7,9 +7,9 @@ network-type:
   - simplicial-complex
   - hypergraph
 tags:
-  - edge labels
   - temporal
   - reviews
+  - 'metadata: edge classes'
   - 'source: benson'
 attachments:
   dataset:
