--- a/src/datasets/semantic-scholar-coauth-sample.mdx
+++ b/src/datasets/semantic-scholar-coauth-sample.mdx
@@ -15,8 +15,7 @@ network-type:
   - simplicial-complex
 tags:
   - social
-  - undirected
-  - edge labels
+  - 'metadata: edge labels'
 attachments:
   dataset:
     url: https://zenodo.org/records/18199501/files/semantic-scholar-coauth-sample.txt.gz?download=1
