--- a/src/datasets/MAG-10.mdx
+++ b/src/datasets/MAG-10.mdx
@@ -7,7 +7,7 @@ citation:
 network-type:
   - hypergraph
 tags:
-  - edge labels
+  - 'metadata: edge classes'
   - 'source: benson'
 attachments:
   dataset:
