--- a/src/datasets/contact-high-school.mdx
+++ b/src/datasets/contact-high-school.mdx
@@ -10,6 +10,7 @@ tags:
   - social
   - temporal
   - proximity
+  - 'metadata: node classes'
   - 'source: benson'
 related:
   - contact-primary-school
