--- a/src/datasets/vegas-bars-reviews.mdx
+++ b/src/datasets/vegas-bars-reviews.mdx
@@ -13,8 +13,8 @@ network-type:
   - simplicial-complex
   - hypergraph
 tags:
-  - edge labels
   - reviews
+  - 'metadata: edge classes'
   - 'source: benson'
 attachments:
   dataset:
