Expose all revisions of a dataset to the API

--- a/src/datasets/MANTRA-2-manifolds.mdx
+++ b/src/datasets/MANTRA-2-manifolds.mdx
@@ -20,7 +20,7 @@ tags:
 related:
   - MANTRA-3-manifolds
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/18161249/files/MANTRA-2-manifolds.txt.gz?download=1
     size: 3021246
 statistics:
