--- a/src/datasets/NDC-classes.mdx
+++ b/src/datasets/NDC-classes.mdx
@@ -12,7 +12,7 @@ tags:
 related:
   - NDC-substances
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17607716/files/NDC-classes.txt.gz?download=1
     size: 506164
 statistics:
