--- a/src/datasets/NDC-substances.mdx
+++ b/src/datasets/NDC-substances.mdx
@@ -12,7 +12,7 @@ tags:
 related:
   - NDC-classes
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17607718/files/NDC-substances.txt.gz?download=1
     size: 1645221
 statistics:
