--- a/src/datasets/algebra-questions.mdx
+++ b/src/datasets/algebra-questions.mdx
@@ -18,7 +18,7 @@ tags:
 related:
   - geometry-questions
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17202446/files/algebra-questions.txt?download=1
     size: 68569
 statistics:
