--- a/src/datasets/amazon-reviews.mdx
+++ b/src/datasets/amazon-reviews.mdx
@@ -19,7 +19,7 @@ tags:
   - 'metadata: node classes'
   - 'source: benson'
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17202002/files/amazon-reviews.txt.gz?download=1
     size: 266617395
 statistics:
