--- a/src/datasets/citeseer-cocitation.mdx
+++ b/src/datasets/citeseer-cocitation.mdx
@@ -10,7 +10,7 @@ related:
   - cora-cocitation
   - pubmed-cocitation
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/18632377/files/citeseer-cocitation.txt.gz?download=1
     size: 17378
 statistics:
