--- a/src/datasets/coauth-DBLP.mdx
+++ b/src/datasets/coauth-DBLP.mdx
@@ -13,7 +13,7 @@ related:
   - coauth-MAG-Geology
   - coauth-MAG-History
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17600531/files/coauth-DBLP.txt.gz?download=1
     size: 56430542
 statistics:
