--- a/src/datasets/coauth-MAG-Geology.mdx
+++ b/src/datasets/coauth-MAG-Geology.mdx
@@ -14,7 +14,7 @@ related:
   - coauth-DBLP
   - coauth-MAG-History
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17600658/files/coauth-MAG-Geology.txt.gz?download=1
     size: 30311118
 statistics:
