--- a/src/datasets/contact-high-school.mdx
+++ b/src/datasets/contact-high-school.mdx
@@ -15,7 +15,7 @@ tags:
 related:
   - contact-primary-school
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/16837446/files/contact-high-school.txt?download=1
     size: 7788202
 statistics:
