--- a/src/datasets/contact-primary-school.mdx
+++ b/src/datasets/contact-primary-school.mdx
@@ -15,7 +15,7 @@ tags:
 related:
   - contact-high-school
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17092521/files/contact-primary-school.txt?download=1
     size: 4860730
 statistics:
