--- a/src/datasets/cora-coauthorship.mdx
+++ b/src/datasets/cora-coauthorship.mdx
@@ -11,7 +11,7 @@ related:
   - cora-cocitation
   - dblp-coauthorship
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/18632379/files/cora-coauthorship.txt.gz?download=1
     size: 19101
 statistics:
