--- a/src/datasets/cora-cocitation.mdx
+++ b/src/datasets/cora-cocitation.mdx
@@ -11,7 +11,7 @@ related:
   - pubmed-cocitation
   - cora-coauthorship
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/18632383/files/cora-cocitation.txt.gz?download=1
     size: 17848
 statistics:
