--- a/src/datasets/dblp-coauthorship.mdx
+++ b/src/datasets/dblp-coauthorship.mdx
@@ -10,7 +10,7 @@ tags:
 related:
   - cora-coauthorship
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/18632385/files/dblp-coauthorship.txt.gz?download=1
     size: 468280
 statistics:
