--- a/src/datasets/geometry-questions.mdx
+++ b/src/datasets/geometry-questions.mdx
@@ -18,7 +18,7 @@ tags:
 related:
   - algebra-questions
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17202479/files/geometry-questions.txt?download=1
     size: 83500
 statistics:
