--- a/src/datasets/house-bills.mdx
+++ b/src/datasets/house-bills.mdx
@@ -16,7 +16,7 @@ related:
   - congress-bills
   - senate-bills
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17198796/files/house-bills.txt?download=1
     size: 5513425
 statistics:
