--- a/src/datasets/karate-club.mdx
+++ b/src/datasets/karate-club.mdx
@@ -9,7 +9,7 @@ tags:
   - social
   - 'lifting: clique complex'
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17953924/files/karate-club.txt?download=1
     size: 2947
 statistics:
