--- a/src/datasets/madison-restaurant-reviews.mdx
+++ b/src/datasets/madison-restaurant-reviews.mdx
@@ -17,7 +17,7 @@ tags:
   - 'metadata: edge classes'
   - 'source: benson'
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17202762/files/madison-restaurant-reviews.txt?download=1
     size: 29980
 statistics:
