--- a/src/datasets/mathoverflow-answers.mdx
+++ b/src/datasets/mathoverflow-answers.mdx
@@ -12,7 +12,7 @@ tags:
 related:
   - stackoverflow-answers
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17202738/files/mathoverflow-answers.txt.gz?download=1
     size: 1082323
 statistics:
