--- a/src/datasets/music-blues-reviews.mdx
+++ b/src/datasets/music-blues-reviews.mdx
@@ -12,7 +12,7 @@ tags:
   - 'metadata: edge classes'
   - 'source: benson'
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17202708/files/music-blues-reviews.txt?download=1
     size: 58451
 statistics:
