--- a/src/datasets/semantic-scholar-coauth-sample.mdx
+++ b/src/datasets/semantic-scholar-coauth-sample.mdx
@@ -17,7 +17,7 @@ tags:
   - social
   - 'metadata: edge labels'
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/18199501/files/semantic-scholar-coauth-sample.txt.gz?download=1
     size: 98128
 statistics:
