--- a/src/datasets/senate-bills.mdx
+++ b/src/datasets/senate-bills.mdx
@@ -15,7 +15,7 @@ related:
   - congress-bills
   - house-bills
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17198877/files/senate-bills.txt?download=1
     size: 952154
 statistics:
