--- a/src/datasets/senate-committees.mdx
+++ b/src/datasets/senate-committees.mdx
@@ -13,7 +13,7 @@ related:
   - senate-bills
   - house-committees
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17200512/files/senate-committees.txt?download=1
     size: 27596
 statistics:
