--- a/src/datasets/trivago-clicks.mdx
+++ b/src/datasets/trivago-clicks.mdx
@@ -10,7 +10,7 @@ tags:
   - 'metadata: node classes'
   - 'source: benson'
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17202694/files/trivago-clicks.txt.gz?download=1
     size: 2966049
 statistics:
