--- a/src/datasets/vegas-bars-reviews.mdx
+++ b/src/datasets/vegas-bars-reviews.mdx
@@ -17,7 +17,7 @@ tags:
   - 'metadata: edge classes'
   - 'source: benson'
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17202660/files/vegas-bars-reviews.txt?download=1
     size: 65695
 statistics:
