--- a/src/app/about/ahorn-loader/page.mdx
+++ b/src/app/about/ahorn-loader/page.mdx
@@ -37,8 +37,11 @@ Then, you can use it in your Python scripts:
 ```python
 import ahorn_loader
 
-# Download a dataset:
+# Download the latest revision of a dataset:
 ahorn_loader.download_dataset("dataset_name", "target_path")
+
+# Download a specific revision of a dataset:
+ahorn_loader.download_dataset("dataset_name", "target_path", revision=3)
 
 # Download and read a dataset:
 # The dataset will be stored in your system's cache. For a more permanent storage
@@ -46,7 +49,4 @@ ahorn_loader.download_dataset("dataset_name", "target_path")
 with ahorn_loader.read_dataset("dataset_name") as dataset:
     for line in dataset:
         ...
-
-# Validate a specific dataset (e.g., before adding it to AHORN):
-ahorn_loader.validate("path_to_dataset_file")
 ```
