--- a/src/datasets/MAG-10.mdx
+++ b/src/datasets/MAG-10.mdx
@@ -10,7 +10,7 @@ tags:
   - 'metadata: edge classes'
   - 'source: benson'
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17200740/files/MAG-10.txt.gz?download=1
     size: 560612
 statistics:
