--- a/src/datasets/MANTRA-3-manifolds.mdx
+++ b/src/datasets/MANTRA-3-manifolds.mdx
@@ -20,7 +20,7 @@ tags:
 related:
   - MANTRA-2-manifolds
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/18161249/files/MANTRA-3-manifolds.txt.gz?download=1
     size: 23982585
 statistics:
