--- a/src/datasets/coauth-MAG-History.mdx
+++ b/src/datasets/coauth-MAG-History.mdx
@@ -14,7 +14,7 @@ related:
   - coauth-DBLP
   - coauth-MAG-Geology
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17600662/files/coauth-MAG-History.txt.gz?download=1
     size: 21767556
 statistics:
