--- a/src/datasets/cooking.mdx
+++ b/src/datasets/cooking.mdx
@@ -9,7 +9,7 @@ tags:
   - 'metadata: edge classes'
   - 'source: benson'
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17202566/files/cooking.txt.gz?download=1
     size: 851416
 statistics:
