--- a/src/datasets/house-committees.mdx
+++ b/src/datasets/house-committees.mdx
@@ -13,7 +13,7 @@ related:
   - house-bills
   - senate-committees
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17202783/files/house-committees.txt?download=1
     size: 83844
 statistics:
