--- a/src/datasets/pubmed-cocitation.mdx
+++ b/src/datasets/pubmed-cocitation.mdx
@@ -11,7 +11,7 @@ related:
   - cora-cocitation
   - citeseer-cocitation
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/18632387/files/pubmed-cocitation.txt.gz?download=1
     size: 136661
 statistics:
