--- a/src/datasets/walmart-trips.mdx
+++ b/src/datasets/walmart-trips.mdx
@@ -10,7 +10,7 @@ tags:
   - 'metadata: node classes'
   - 'source: benson'
 attachments:
-  dataset:
+  revision-1:
     url: https://zenodo.org/records/17201931/files/walmart-trips.txt.gz?download=1
     size: 1420115
 statistics:
