--- a/src/datasets/cooking.mdx
+++ b/src/datasets/cooking.mdx
@@ -579,6 +579,11 @@ Raw data was obtained from the [“What's Cooking?” Kaggle competition](https:
 
 <Alert type="warning">In the original dataset, some nodes are repeated within hyperedges. This version of the dataset has removed these duplicates.</Alert>
 
+## Attributes
+
+- `ingredient : string`: The name of the ingredient corresponding to a node.
+- `cuisine : string`: The category of the recipe corresponding to a hyperedge.
+
 ## Dataset Statistics
 
 <dl className="not-prose grid gap-5 sm:grid-cols-2">
