Explicitly name attributes in `MAG-10`

--- a/src/datasets/MAG-10.mdx
+++ b/src/datasets/MAG-10.mdx
@@ -168,6 +168,10 @@ Papers with more than 25 authors were omitted.
 
 <Alert type="warning">Node 40706 has an erroneous label assignment in the source dataset. We assigned it to the first category.</Alert>
 
+## Attributes
+
+- `conference : string`: The conference where the corresponding paper was published.
+
 ## Dataset Statistics
 
 <dl className="not-prose grid gap-5 sm:grid-cols-2">
