Explicitly name attributes in `semantic-scholar-coauth-sample`

--- a/src/datasets/semantic-scholar-coauth-sample.mdx
+++ b/src/datasets/semantic-scholar-coauth-sample.mdx
@@ -77,6 +77,12 @@ import { formatNumber } from "@/utils/format";
 Constructed from a subsample of the Semantic Scholar Open Research Corpus, this dataset is a simplicial complex where nodes are authors and simplices are sets of co-authors on papers.
 Values on every simplex indicate the sum of citations of all papers co-authored at least by the corresponding set of authors.
 
+## Attributes
+
+This dataset has the following simplex attributes:
+
+- `citations : int`: The sum of citations of all papers co-authored at least by the corresponding set of authors.
+
 ## Example
 
 <div className="grid gap-4 md:grid-cols-2">
