Make revision system clearer

--- a/src/app/about/ahorn-loader/page.mdx
+++ b/src/app/about/ahorn-loader/page.mdx
@@ -1,3 +1,5 @@
+import Alert from "@/components/alert";
+
 export const metadata = {
   title: "ahorn-loader | AHORN - Aachen Higher-Order Repository of Networks",
 };
@@ -50,3 +52,5 @@ with ahorn_loader.read_dataset("dataset_name") as dataset:
     for line in dataset:
         ...
 ```
+
+<Alert type="info">`ahorn-loader` loads the latest revision of a dataset by default. To ensure future reproducibility, it is recommended to pin the revision number of the datasets you use.</Alert>
