--- a/src/app/about/page.mdx
+++ b/src/app/about/page.mdx
@@ -64,6 +64,11 @@ The project is similar in spirit to graph repositories like [ICON](https://icon.
   </dl>
 </div>
 
+## Persistence Statement
+
+All datasets made available in AHORN are hosted on [Zenodo](https://zenodo.org/communities/ahorn/), a reputable open-access repository that ensures long-term preservation and accessibility of research data.
+Datasets are versioned and previous versions always remain accessible, allowing researchers to reference specific versions in their work and ensure future reproducibility of their results.
+
 ## White Paper
 
 We are in the process of writing a white paper that details the design principles, data formats, and usage guidelines for AHORN.
